Get rid of all Vectors Misc code quality improvements update code style to more modern java standards